update education and experience

--- a/index.html
+++ b/index.html
@@ -262,38 +262,82 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Bagus Nugroho</h4>
+              <p align="justify"><em>
+                I am a Fresh Graduate in Computer Engineering and Informatics from Politeknik Negeri Bandung and a developer who has been working since 2018, with experience in developing and designing responsive and user-friendly websites and application systems. With expertise in various frameworks and programming languages, I am ready to create innovative and effective technology solutions to meet clients' needs.
+
+                <br><br>
+
+                I have the ability to collaborate in dynamic teams and can quickly adapt to changing project requirements. Additionally, I have a strong enthusiasm for artificial intelligence, aiming to make life easier through the application of technologies such as speech-to-text, text-to-speech, summary generators, similarity detection, and chatbots.
+              </em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Ciamis, West Java, Indonesia</li>
+                <li>+62 822 1703 6849</li>
+                <li>bagusnugroho1604@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Education - Formal</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bandung State Polytechnic</h4>
+              <h5>August 2021 - August 2024</h5>
+              <p><em>Associate's Degree of Informatic Engineering</em></p>
+              <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Polytechnic of the Indonesian Institute for Education and Professional Development (LP3I) Tasikmalaya</h4>
+              <h5>September 2020 - September 2021 <b>RESIGN</b></h5>
+              <p><em>Associate's Degree of Informatic Management</em></p>
+              <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
             </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Vocational High School 1 Ciamis</h4>
+              <h5>May 2017 - May 2020</h5>
+              <p><em>Software Engineering</em></p>
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Junior High School 1 Ciamis</h4>
+              <h5>2014 - 2017</h5>
+              <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Elementary School 1 Sindarasa</h4>
+              <h5>2008 - 2014</h5>
+              <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Atikan Kindergarten</h4>
+              <h5>July 2007 - June 2008</h5>
+              <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+            </div><!-- Edn Resume Item -->
+
+            <h3 class="resume-title">Education - Informal</h3>
+            <div class="resume-item">
+              <h4>Dibimbing.id </h4>
+              <h5>September 2024 <b>SHORT CLASS BOOTCAMP</B></h5>
+              <p><em>Data Analyst</em></p>
+              <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
+            </div><!-- Edn Resume Item -->
+
+            
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Information Technology Programmer</h4>
+              <h5>September 2024 - Present</h5>
+              <p><em><a href="https://setdprd.ciamiskab.go.id/" target="_blank">Secretariat of the Regional Representative Council of Ciamis Regency</a>, Ciamis </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
@@ -303,9 +347,117 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Freelancer</h4>
+              <h5>2021 - Present</h5>
+              <p><em><a href="http://www.multikreatifindonesia.com/" target="_blank">Multi Kreatif Indonesia</a>, Ciamis </em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Backend Developer</h4>
+              <h5>October 2023 - December 2023</h5>
+              <p><em><a href="http://linx.chat/" target="_blank">PT Linxchat Global Indonesia</a>, BSD </em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Database Administrator Intern</h4>
+              <h5>June 2023 - September 2023</h5>
+              <p><em><a href="https://cakra.ai/" target="_blank">PT Cakra Tekno Nusantara (Cakra.AI)</a>, BSD</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>System Analyst Intern</h4>
+              <h5>June 2023 - September 2023</h5>
+              <p><em><a href="https://cakra.ai/" target="_blank">PT Cakra Tekno Nusantara (Cakra.AI)</a>, BSD</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Quality Assurance (QA) Tester Intern</h4>
+              <h5>June 2023 - September 2023</h5>
+              <p><em><a href="https://cakra.ai/" target="_blank">PT Cakra Tekno Nusantara (Cakra.AI)</a>, BSD</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Scrum Master Intern</h4>
+              <h5>June 2023 - September 2023</h5>
+              <p><em><a href="https://cakra.ai/" target="_blank">PT Cakra Tekno Nusantara (Cakra.AI)</a>, BSD</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Backend Developer Intern</h4>
+              <h5>June 2023 - September 2023</h5>
+              <p><em><a href="https://cakra.ai/" target="_blank">PT Cakra Tekno Nusantara (Cakra.AI)</a>, BSD</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Technical Writer Intern</h4>
+              <h5>June 2023 - September 2023</h5>
+              <p><em><a href="https://cakra.ai/" target="_blank">PT Cakra Tekno Nusantara (Cakra.AI)</a>, BSD</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>IT Support Intern</h4>
+              <h5>April 2019 - August 2019</h5>
+              <p><em><a href="https://pdamciamis.co.id/" target="_blank">PDAM Tirta Galuh</a>, Ciamis</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Web Developer Intern</h4>
+              <h5>April 2019 - August 2019</h5>
+              <p><em><a href="https://pdamciamis.co.id/" target="_blank">PDAM Tirta Galuh</a>, Ciamis</em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
