--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
             <h2>Bagus Nugroho</h2>
             <p>I'm <span class="typed" data-typed-items="Fresh Graduate of Informatics Engineer at Bandung State Polytechnic, Software Engineer, Artificial Intelligence Enthusiast, Data Enthusiast, Founder Multi Kreatif Indonesia">Fresh Graduate of Informatics Engineer at Bandung State Polytechnic</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/unab.banu/"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/bagus-n/"><i class="bi bi-linkedin"></i></a>
+              <a href="#" target="_blank"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.facebook.com/share/1XS7nXdUXh/?mibextid=qi2Omg" target="_blank"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/unab.banu/" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.tiktok.com/@bradabagus" target="_blank"><i class="bi bi-tiktok"></i></a>
+              <a href="https://www.linkedin.com/in/bagus-n/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -327,8 +328,6 @@
               <p><em>Data Analyst</em></p>
               <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
             </div><!-- Edn Resume Item -->
-
-            
 
           </div>
 
