--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
               <a href="https://www.tiktok.com/@bradabagus" target="_blank"><i class="bi bi-tiktok"></i></a>
               <a href="https://www.linkedin.com/in/bagus-n/" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
+            
+            <br>
+            <a class="btn btn-outline-secondary" href="https://drive.google.com/file/d/1SQMyIrk5WxKQ-d3lRM_y1RD1xAyYoc4w/view?usp=sharing" target="_blank">DOWNLOAD CV <i class="bi bi-download"></i></a>
           </div>
         </div>
       </div>
