--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2>Bagus Nugroho</h2>
             <p>I'm <span class="typed" data-typed-items="Fresh Graduate of Informatics Engineer at Bandung State Polytechnic, Software Engineer, Artificial Intelligence Enthusiast, Data Enthusiast, Founder Multi Kreatif Indonesia">Fresh Graduate of Informatics Engineer at Bandung State Polytechnic</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#" target="_blank"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://x.com/om_guud16" target="_blank"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.facebook.com/share/1XS7nXdUXh/?mibextid=qi2Omg" target="_blank"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/unab.banu/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.tiktok.com/@bradabagus" target="_blank"><i class="bi bi-tiktok"></i></a>
@@ -96,7 +96,8 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
+            <img src="assets/img/IMG_20220929_205122.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Software Engineer</h2>
