update hero img

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
   <main class="main">
 
     <!-- Hero Section -->
+    <!-- <section id="hero" class="hero section light-background"> -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="">
+      <img src="assets/img/hero-bg2.png" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -108,16 +109,16 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.bradabagus.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 82217036849</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ciamis, West Java</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://www.bradabagus.com" target="_blank"><span>www.bradabagus.com</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <a href="https://wa.me/6282217036849" target="_blank"><span>+62 82217036849</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <a href="https://maps.app.goo.gl/EWPxQH2LDjSwQrv66" target="_blank"><span>Ciamis, West Java</span></a></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Associate's Degree</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>bagusnugroho1604@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:bagusnugroho1604@gmail.com" target="_blank"><span>bagusnugroho1604@gmail.com</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
